[gd_scene load_steps=20 format=3 uid="uid://dulc46abndfnx"]

[ext_resource type="Script" uid="uid://bqclbti62ch0b" path="res://scenes/ui/pause_menu_press_and_hold.gd" id="1_mvidx"]
[ext_resource type="Theme" uid="uid://ch4ic0feakt4r" path="res://assets/themes/default_theme.tres" id="2_mvidx"]
[ext_resource type="PackedScene" uid="uid://b7jbkkvivmc7c" path="res://scenes/ui/sound_button.tscn" id="3_2wl57"]
[ext_resource type="Material" uid="uid://dxac3sbue2ygf" path="res://assets/particles/continue_particle_process_material.tres" id="4_1y051"]
[ext_resource type="PackedScene" uid="uid://da10yhbdl8klh" path="res://assets/particles/continue_particles.tscn" id="4_wnrpl"]

[sub_resource type="Animation" id="Animation_fu5m3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/Choices/RestoreMarginContainer:theme_override_constants/margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/Choices/RestoreMarginContainer:theme_override_constants/margin_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/PanelContainer/MarginContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MarginContainer:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MarginContainer/ControlsPanel:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ijkb4"]
resource_name = "auto"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/PanelContainer/MarginContainer:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"focus_first_available_choice"
}, {
"args": [],
"method": &"animation_player_play_restore"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"is_fully_opened"
}]
}

[sub_resource type="Animation" id="Animation_buwwf"]
resource_name = "out"
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/PanelContainer/MarginContainer:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/ControlsPanel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_7k7h4"]
resource_name = "restore"
length = 2.0
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/Choices/RestoreMarginContainer:theme_override_constants/margin_top")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0, 36, 32]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/Choices/RestoreMarginContainer:theme_override_constants/margin_bottom")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0, 36, 32]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_buwwf"]
_data = {
&"RESET": SubResource("Animation_fu5m3"),
&"auto": SubResource("Animation_ijkb4"),
&"out": SubResource("Animation_buwwf"),
&"restore": SubResource("Animation_7k7h4")
}

[sub_resource type="Animation" id="Animation_k4mhs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RestoreMarginContainer/RestoreButton:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.568627, 0.647059, 0.858824, 1)]
}

[sub_resource type="Animation" id="Animation_moutl"]
resource_name = "restorebuttonshimmer"
length = 5.0
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RestoreMarginContainer/RestoreButton:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.568627, 0.647059, 0.858824, 1), Color(0.5676, 0.86, 0.767407, 1), Color(0.7138, 0.86, 0.5676, 1), Color(0.86, 0.630953, 0.5676, 1), Color(0.86, 0.5676, 0.782027, 1), Color(0.568627, 0.647059, 0.858824, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k4mhs"]
_data = {
&"RESET": SubResource("Animation_k4mhs"),
&"restorebuttonshimmer": SubResource("Animation_moutl")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ijkb4"]
bg_color = Color(0.3, 0.3, 0.3, 0.435294)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fu5m3"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_fu5m3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1y051"]
bg_color = Color(0.1564, 0.1196, 0.23, 0.870588)
border_width_left = 10
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.393123, 0.322212, 0.542962, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 8.0
expand_margin_top = 4.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_he275"]
bg_color = Color(0.1292, 0.0988, 0.19, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mvidx"]
bg_color = Color(0.1292, 0.0988, 0.19, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[node name="PauseMenuPressAndHold" type="CanvasLayer"]
process_mode = 3
layer = 5
script = ExtResource("1_mvidx")
confirmation_timer_base_waittime = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
process_mode = 3
libraries = {
&"": SubResource("AnimationLibrary_buwwf")
}
autoplay = "auto"

[node name="ConfirmationTimer" type="Timer" parent="."]
unique_name_in_owner = true
process_mode = 3
wait_time = 99.0
one_shot = true
ignore_time_scale = true

[node name="MarginContainer" type="MarginContainer" parent="."]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
process_mode = 3
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
process_mode = 3
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
process_mode = 3
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme = ExtResource("2_mvidx")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer"]
process_mode = 3
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Menu" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer"]
process_mode = 3
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu"]
process_mode = 3
layout_mode = 2
theme_override_constants/outline_size = 14
text = "PAUSED"
horizontal_alignment = 1

[node name="Choices" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu"]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
theme_override_constants/separation = 8

[node name="RestoreMarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/Choices"]
unique_name_in_owner = true
process_mode = 3
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = 0

[node name="RestoreAnimationPlayer" type="AnimationPlayer" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/Choices/RestoreMarginContainer"]
unique_name_in_owner = true
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_k4mhs")
}
autoplay = "restorebuttonshimmer"

[node name="RestoreButton" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/Choices/RestoreMarginContainer" instance=ExtResource("3_2wl57")]
unique_name_in_owner = true
visible = false
self_modulate = Color(0.568627, 0.647059, 0.858824, 1)
layout_mode = 2
text = "REVIVE"

[node name="Node2D" type="Node2D" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/Choices/RestoreMarginContainer/RestoreButton"]
position = Vector2(-25.78, 16.17)

[node name="ContinueParticles" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/Choices/RestoreMarginContainer/RestoreButton/Node2D" instance=ExtResource("4_wnrpl")]
process_material = ExtResource("4_1y051")

[node name="ResumeButton" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/Choices" instance=ExtResource("3_2wl57")]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "RESUME"

[node name="ControlsButton" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/Choices" instance=ExtResource("3_2wl57")]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "CONTROLS"

[node name="OptionsButton" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/Choices" instance=ExtResource("3_2wl57")]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "OPTIONS"

[node name="RestartButton" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/Choices" instance=ExtResource("3_2wl57")]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "RETRY"

[node name="LeaveButton" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/Choices" instance=ExtResource("3_2wl57")]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "QUIT"

[node name="ConfirmProgressBar" type="ProgressBar" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu"]
unique_name_in_owner = true
process_mode = 3
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_ijkb4")
theme_override_styles/fill = SubResource("StyleBoxFlat_fu5m3")
show_percentage = false

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/ConfirmProgressBar"]
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/ConfirmProgressBar/MarginContainer"]
process_mode = 3
layout_mode = 2
alignment = 1

[node name="ProgressNotch1" type="ColorRect" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/ConfirmProgressBar/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
process_mode = 3
material = SubResource("CanvasItemMaterial_fu5m3")
custom_minimum_size = Vector2(8, 12)
layout_mode = 2
size_flags_horizontal = 2

[node name="ProgressNotch2" type="ColorRect" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/ConfirmProgressBar/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
process_mode = 3
custom_minimum_size = Vector2(8, 12)
layout_mode = 2
size_flags_horizontal = 4

[node name="ProgressNotch3" type="ColorRect" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/ConfirmProgressBar/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
process_mode = 3
custom_minimum_size = Vector2(8, 12)
layout_mode = 2
size_flags_horizontal = 10

[node name="ControlsPanel" type="PanelContainer" parent="MarginContainer"]
visible = false
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme = ExtResource("2_mvidx")
theme_override_styles/panel = SubResource("StyleBoxFlat_1y051")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ControlsPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ControlsLabel" type="Label" parent="MarginContainer/ControlsPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Controls"
horizontal_alignment = 1

[node name="KeyboardPanelContainer" type="PanelContainer" parent="MarginContainer/ControlsPanel/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_he275")

[node name="KeyboardHBoxContainer" type="VBoxContainer" parent="MarginContainer/ControlsPanel/VBoxContainer/KeyboardPanelContainer"]
layout_mode = 2

[node name="ControllerLabel" type="Label" parent="MarginContainer/ControlsPanel/VBoxContainer/KeyboardPanelContainer/KeyboardHBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 16
text = "Keyboard : "
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ControlsPanel/VBoxContainer/KeyboardPanelContainer/KeyboardHBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ControlsPanel/VBoxContainer/KeyboardPanelContainer/KeyboardHBoxContainer/VBoxContainer"]
modulate = Color(0, 0.986765, 0.80742, 1)
layout_mode = 2
size_flags_horizontal = 0

[node name="MoveControlsLabel" type="Label" parent="MarginContainer/ControlsPanel/VBoxContainer/KeyboardPanelContainer/KeyboardHBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_font_sizes/font_size = 16
text = "Move : "

[node name="MoveControlsLabel2" type="Label" parent="MarginContainer/ControlsPanel/VBoxContainer/KeyboardPanelContainer/KeyboardHBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "WASD
Left+Right Arrows"
vertical_alignment = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/ControlsPanel/VBoxContainer/KeyboardPanelContainer/KeyboardHBoxContainer/VBoxContainer"]
modulate = Color(1, 0.41501, 0.361362, 1)
layout_mode = 2
size_flags_horizontal = 0

[node name="MoveControlsLabel" type="Label" parent="MarginContainer/ControlsPanel/VBoxContainer/KeyboardPanelContainer/KeyboardHBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 5
theme_override_font_sizes/font_size = 16
text = "Shoot : "

[node name="MoveControlsLabel2" type="Label" parent="MarginContainer/ControlsPanel/VBoxContainer/KeyboardPanelContainer/KeyboardHBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "J
Space
Enter"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/ControlsPanel/VBoxContainer/KeyboardPanelContainer/KeyboardHBoxContainer/VBoxContainer"]
modulate = Color(1, 0.486275, 0.827451, 1)
layout_mode = 2
size_flags_horizontal = 0

[node name="MoveControlsLabel" type="Label" parent="MarginContainer/ControlsPanel/VBoxContainer/KeyboardPanelContainer/KeyboardHBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 5
theme_override_font_sizes/font_size = 16
text = "Power : "

[node name="ShootControlsLabel" type="Label" parent="MarginContainer/ControlsPanel/VBoxContainer/KeyboardPanelContainer/KeyboardHBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "K
Shift"

[node name="ControllerPanelContainer" type="PanelContainer" parent="MarginContainer/ControlsPanel/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mvidx")

[node name="ControllerHBoxContainer" type="VBoxContainer" parent="MarginContainer/ControlsPanel/VBoxContainer/ControllerPanelContainer"]
layout_mode = 2

[node name="ControllerLabel" type="Label" parent="MarginContainer/ControlsPanel/VBoxContainer/ControllerPanelContainer/ControllerHBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 16
text = "Controller : "
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ControlsPanel/VBoxContainer/ControllerPanelContainer/ControllerHBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ControlsPanel/VBoxContainer/ControllerPanelContainer/ControllerHBoxContainer/VBoxContainer"]
modulate = Color(0, 0.986765, 0.80742, 1)
layout_mode = 2
size_flags_horizontal = 0

[node name="MoveControlsLabel" type="Label" parent="MarginContainer/ControlsPanel/VBoxContainer/ControllerPanelContainer/ControllerHBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_font_sizes/font_size = 16
text = "Move : "

[node name="MoveControlsLabel2" type="Label" parent="MarginContainer/ControlsPanel/VBoxContainer/ControllerPanelContainer/ControllerHBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "D-Pad
Left Stick
Right Stick"
vertical_alignment = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/ControlsPanel/VBoxContainer/ControllerPanelContainer/ControllerHBoxContainer/VBoxContainer"]
modulate = Color(1, 0.41501, 0.361362, 1)
layout_mode = 2
size_flags_horizontal = 0

[node name="MoveControlsLabel" type="Label" parent="MarginContainer/ControlsPanel/VBoxContainer/ControllerPanelContainer/ControllerHBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 5
theme_override_font_sizes/font_size = 16
text = "Shoot : "

[node name="MoveControlsLabel2" type="Label" parent="MarginContainer/ControlsPanel/VBoxContainer/ControllerPanelContainer/ControllerHBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "X or R1   (PlayStation) 
A or RB  (XBOX)
"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/ControlsPanel/VBoxContainer/ControllerPanelContainer/ControllerHBoxContainer/VBoxContainer"]
modulate = Color(1, 0.486275, 0.827451, 1)
layout_mode = 2
size_flags_horizontal = 0

[node name="MoveControlsLabel" type="Label" parent="MarginContainer/ControlsPanel/VBoxContainer/ControllerPanelContainer/ControllerHBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 5
theme_override_font_sizes/font_size = 16
text = "Power : "

[node name="ShootControlsLabel" type="Label" parent="MarginContainer/ControlsPanel/VBoxContainer/ControllerPanelContainer/ControllerHBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "[] or L1  (PlayStation)
X or LB  (XBOX)"
